--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2018"
 
 [dependencies]
 clap = { version = "3.0.0-beta.1", optional = true }
-ansi_term = { version = "0.12.1", optional = true }
 rustyline = { version = "6.1.2", optional = true }
+ansi_term = "0.12.1"
 lazy_static = "1.4.0"
 regex = "1.3.4"
 serde = { version = "1.0", features = ["derive"] }
@@ -28,7 +28,7 @@ path = "src/bin.rs"
 
 [features]
 default = ["cli"]
-cli = ["clap", "ansi_term", "rustyline"]
+cli = ["clap", "rustyline"]
 wasm = ["wasm-bindgen"]
 
 [profile.release]
