--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,6 @@ repository = "https://github.com/lgalabru/clarity-repl"
 categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
 
 [dependencies]
-pico-args = { version = "0.3.1", optional = true }
-rustyline = { version = "6.1.2", optional = true }
 ansi_term = "0.12.1"
 lazy_static = "1.4.0"
 regex = "1.3.4"
@@ -23,8 +21,12 @@ sha2 = "0.8.1"
 sha3 = "0.8.2"
 serde_derive = "1.0"
 ripemd160 = "0.8.0"
+# CLI
+pico-args = { version = "0.3.1", optional = true }
+rustyline = { version = "6.1.2", optional = true }
+# WASM
 wasm-bindgen = { version = "0.2", optional = true }
-
+# Jupyter kernel
 json = { version = "0.11.15", optional = true } # should use serde_json instead
 failure = { version = "0.1.5", default-features = false, features = [ "std" ], optional = true }
 zmq = { version = "0.9.1", default-features = false, optional = true }
