--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "clarity-repl"
 description = "Clarity REPL"
 version = "0.1.0"
 authors = ["Ludo Galabru <ludovic@galabru.com>"]
+readme = "README.md"
 edition = "2018"
 license = "GPL-3.0-only"
 keywords = ["blockstack", "blockchain", "clarity", "smart contract", "lsp"]
@@ -26,16 +27,6 @@ pico-args = { version = "0.3.1", optional = true }
 rustyline = { version = "6.1.2", optional = true }
 # WASM
 wasm-bindgen = { version = "0.2", optional = true }
-# Jupyter kernel
-json = { version = "0.11.15", optional = true } # should use serde_json instead
-failure = { version = "0.1.5", default-features = false, features = [ "std" ], optional = true }
-zmq = { version = "0.9.1", default-features = false, optional = true }
-uuid = { version = "0.7.4", features = [ "v4" ], optional = true }
-hmac = { version = "0.7.1", optional = true }
-hex = { version = "0.3.2", optional = true }
-colored = { version = "1.8.0", optional = true } # should use ansi_term instead
-dirs = { version = "2.0.2", optional = true }
-chrono = { version = "0.4.7", optional = true }
 
 [lib]
 name = "clarity_repl"
@@ -46,15 +37,10 @@ crate-type = ["lib"]
 name = "clarity-repl"
 path = "src/bin.rs"
 
-[[bin]]
-name = "clarity-jupyter-kernel"
-path = "src/kernel.rs"
-
 [features]
 default = ["cli"]
 cli = ["pico-args", "rustyline"]
 wasm = ["wasm-bindgen"]
-jupyter = ["json", "failure", "zmq", "uuid", "hmac", "hex", "colored", "dirs", "chrono"]
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
