--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Ludo Galabru <ludovic@galabru.com>"]
 readme = "README.md"
 edition = "2018"
 license = "GPL-3.0-only"
-keywords = ["blockstack", "blockchain", "clarity", "smart contract", "lsp"]
+keywords = ["blockstack", "blockchain", "clarity", "smart-contract", "repl"]
 exclude = ["vs-client/**"]
 homepage = "https://lgalabru.github.io/clarity-repl/"
 repository = "https://github.com/lgalabru/clarity-repl"
