--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ sha2 = "0.8.1"
 sha3 = "0.8.2"
 serde_derive = "1.0"
 ripemd160 = "0.8.0"
+integer-sqrt = "0.1.3"
+secp256k1 = { version = "0.19.0", features = ["serde", "recovery"] }
+
 # CLI
 pico-args = { version = "0.3.1", optional = true }
 rustyline = { version = "6.1.2", optional = true }
