--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,14 @@ ansi_term = "0.12.1"
 lazy_static = "1.4.0"
 regex = "1.3.4"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.47"
+serde_json = { version = "1.0.47", features = ["unbounded_depth"] }
 sha2 = "0.8.1"
 sha3 = "0.8.2"
 serde_derive = "1.0"
 ripemd160 = "0.8.0"
 integer-sqrt = "0.1.3"
 libsecp256k1 = "0.3.5"
+serde_stacker = "0.1"
 
 # CLI
 pico-args = { version = "0.3.1", optional = true }
