--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "clarity-repl"
 description = "Clarity REPL"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Ludo Galabru <ludovic@galabru.com>"]
 readme = "README.md"
 edition = "2018"
@@ -25,10 +25,14 @@ ripemd160 = "0.8.0"
 integer-sqrt = "0.1.3"
 libsecp256k1 = "0.3.5"
 serde_stacker = "0.1"
+rand = "0.8.3"
 
 # CLI
-pico-args = { version = "0.3.1", optional = true }
-rustyline = { version = "6.1.2", optional = true }
+pico-args = { version = "0.4.0", optional = true }
+rustyline = { version = "7.1.0", optional = true }
+# cli-table = { version = "=0.4.0", optional = true }
+prettytable-rs = { version = "0.8.0", optional = true }
+
 # WASM
 wasm-bindgen = { version = "0.2", optional = true }
 
@@ -47,7 +51,7 @@ path = "src/bin.rs"
 
 [features]
 default = ["cli"]
-cli = ["pico-args", "rustyline"]
+cli = ["pico-args", "rustyline", "prettytable-rs"]
 wasm = ["wasm-bindgen"]
 
 [profile.release]
