--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "clarity-repl"
 description = "Clarity REPL"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["Ludo Galabru <ludovic@galabru.com>"]
 readme = "README.md"
 edition = "2018"
@@ -26,11 +26,11 @@ integer-sqrt = "0.1.3"
 libsecp256k1 = "0.3.5"
 serde_stacker = "0.1"
 rand = "0.8.3"
+atty = "0.2.14"
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
 rustyline = { version = "7.1.0", optional = true }
-# cli-table = { version = "=0.4.0", optional = true }
 prettytable-rs = { version = "0.8.0", optional = true }
 
 # WASM
