--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ libsecp256k1 = "0.3.5"
 serde_stacker = "0.1"
 rand = "0.8.3"
 atty = "0.2.14"
+async-std = { version = "1.9.0", features = ["attributes"] }
+reqwest = { version = "0.11", features = ["blocking", "json", "rustls"] }
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
