--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ ripemd160 = "0.9.1"
 integer-sqrt = "0.1.3"
 libsecp256k1 = "0.3.5"
 serde_stacker = "0.1"
-rand = "0.8.3"
+rand = "=0.7.3"
 atty = "0.2.14"
 async-std = { version = "1.9.0", features = ["attributes"] }
 reqwest = { version = "0.11", features = ["blocking", "json", "rustls"] }
