--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ serde_stacker = "0.1"
 rand = "=0.7.3"
 atty = "0.2.14"
 async-std = { version = "1.9.0", features = ["attributes"] }
-reqwest = { version = "0.11", features = ["blocking", "json", "rustls"] }
+reqwest = { version = "0.11", features = ["json", "rustls"] }
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
