--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,16 +27,17 @@ libsecp256k1 = "0.3.5"
 serde_stacker = "0.1"
 rand = "=0.7.3"
 atty = "0.2.14"
-async-std = { version = "1.9.0", features = ["attributes"] }
-reqwest = { version = "0.11", features = ["json", "rustls"] }
+# async-std = { version = "1.9.0", features = ["attributes"] }
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
 rustyline = { version = "7.1.0", optional = true }
 prettytable-rs = { version = "0.8.0", optional = true }
+reqwest = { version = "0.11", features = ["json", "blocking", "rustls"], optional = true }
 
 # WASM
 wasm-bindgen = { version = "0.2", optional = true }
+reqwest-wasm = { version = "0.11", features = ["json", "blocking"], optional = true }
 
 [lib]
 name = "clarity_repl"
@@ -53,8 +54,8 @@ path = "src/bin.rs"
 
 [features]
 default = ["cli"]
-cli = ["pico-args", "rustyline", "prettytable-rs"]
-wasm = ["wasm-bindgen"]
+cli = ["pico-args", "rustyline", "prettytable-rs", "reqwest"]
+wasm = ["wasm-bindgen", "reqwest-wasm"]
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
