--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ reqwest = { version = "0.11", features = ["json", "blocking", "rustls"], optiona
 
 # WASM
 wasm-bindgen = { version = "0.2", optional = true }
-reqwest-wasm = { version = "0.11", features = ["json", "blocking"], optional = true }
+reqwest-wasm = { version = "0.11", features = ["json"], optional = true }
 
 [lib]
 name = "clarity_repl"
