--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ libsecp256k1 = "0.3.5"
 serde_stacker = "0.1"
 rand = "=0.7.3"
 atty = "0.2.14"
-# async-std = { version = "1.9.0", features = ["attributes"] }
+async-std = { version = "1.9.0" }
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
