--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,13 +27,13 @@ libsecp256k1 = "0.3.5"
 serde_stacker = "0.1"
 rand = "=0.7.3"
 atty = "0.2.14"
-async-std = { version = "1.9.0" }
+tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread"], optional = true }
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
 rustyline = { version = "7.1.0", optional = true }
 prettytable-rs = { version = "0.8.0", optional = true }
-reqwest = { version = "0.11", features = ["json", "blocking", "rustls"], optional = true }
+reqwest = { version = "0.11", features = ["json", "rustls"], optional = true }
 
 # WASM
 wasm-bindgen = { version = "0.2", optional = true }
@@ -54,7 +54,7 @@ path = "src/bin.rs"
 
 [features]
 default = ["cli"]
-cli = ["pico-args", "rustyline", "prettytable-rs", "reqwest"]
+cli = ["pico-args", "rustyline", "prettytable-rs", "reqwest", "tokio"]
 wasm = ["wasm-bindgen", "reqwest-wasm"]
 
 [profile.release]
