--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+history.txt
 # Created by https://www.gitignore.io/api/rust,linux,macos
 # Edit at https://www.gitignore.io/?templates=rust,linux,macos
 
