--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "clarity-repl"
 description = "Clarity REPL"
-version = "0.12.3"
+version = "0.13.0"
 authors = ["Ludo Galabru <ludovic@galabru.com>"]
 readme = "README.md"
 edition = "2018"
@@ -17,7 +17,7 @@ ansi_term = "0.12.1"
 lazy_static = "1.4.0"
 regex = "1.3.4"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = { version = "1.0.47", features = ["arbitrary_precision", "unbounded_depth"] }
+serde_json = { version = "1.0.47", features = ["unbounded_depth"] }
 sha2 = "0.9.3"
 sha3 = "0.9.1"
 serde_derive = "1.0"
