--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "clarity-repl"
 description = "Clarity REPL"
-version = "0.14.1"
+version = "0.16.0"
 authors = ["Ludo Galabru <ludovic@galabru.com>"]
 readme = "README.md"
 edition = "2018"
@@ -13,6 +13,8 @@ repository = "https://github.com/lgalabru/clarity-repl"
 categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
 
 [dependencies]
+anyhow = "1.0.43"
+thiserror = "1.0.29"
 ansi_term = "0.12.1"
 lazy_static = "1.4.0"
 regex = "1.3.4"
@@ -28,7 +30,10 @@ serde_stacker = "0.1"
 rand = "=0.7.3"
 atty = "0.2.14"
 tokio = { version = "=1.8.1", features = ["rt", "rt-multi-thread"], optional = true }
-
+tracing = "0.1.26"
+tracing-subscriber = "0.2.20"
+tracing-appender ="0.1.2"
+itertools = "0.10.1"
 # CLI
 pico-args = { version = "0.4.0", optional = true }
 rustyline = { version = "7.1.0", optional = true }
