--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,14 +42,14 @@ jobs:
           components: rustfmt
           override: true
 
+      - name: Install dependencies
+        run: cargo install cargo-audit
+
       - name: Cache cargo
         uses: actions/cache@v2
         with:
           path: ~/.cargo/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Install dependencies
-        run: cargo install cargo-audit
 
       - name: Run audit
         run: cargo audit --ignore RUSTSEC-2021-0119
@@ -58,7 +58,7 @@ jobs:
         run: cargo fmt --all -- --check
 
   build:
-    name: Build clarity-repl and WASM
+    name: Build
     runs-on: ubuntu-latest
     needs: pre_run
 
@@ -70,26 +70,22 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: ${{ matrix.target }}
           profile: minimal
           override: true
+
+      - name: Install dependencies
+        run: cargo install wasm-pack
 
       - name: Cache cargo
         uses: actions/cache@v2
         with:
           path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
+            ~/.cargo/
             target/release/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Install dependencies
-        run: cargo install wasm-pack
-
       - name: Build - Cargo
-        run: cargo build --release --locked
+        run: cargo build --release
 
       - name: Build - WASM
         run: wasm-pack build --target web --release -- --no-default-features --features wasm
