--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,4 +91,4 @@ jobs:
         run: wasm-pack build --target web --release -- --no-default-features --features wasm
 
       - name: debug
-        run: ls -la target/*
+        run: ls -la target/**/*
