--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,12 @@ jobs:
       - name: Cache cargo
         uses: actions/cache@v2
         with:
-          path: ~/.cargo/
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
 
       - name: Install dependencies
@@ -78,8 +83,11 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            ~/.cargo/
-            target/release/
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
 
       - name: Install dependencies
@@ -91,5 +99,53 @@ jobs:
       - name: Build - WASM
         run: wasm-pack build --target web --release -- --no-default-features --features wasm
 
-      - name: debug
-        run: ls -la target/**/*
+      - name: Upload clarity-repl to workflow run
+        uses: actions/upload-artifact@v2
+        with:
+          name: clarity-repl
+          path: target/release/clarity-repl
+
+      - name: Upload wasm to workflow run
+        uses: actions/upload-artifact@v2
+        with:
+          name: clarity_repl.wasm
+          path: target/wasm32-unknown-unknown/release/clarity_repl.wasm
+
+      - name: Publish clarity-repl to crates.io
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          cargo login ${{ secrets.CARGO_CRATES_IO_API_KEY }}
+          cargo publish
+
+      - name: Upload wasm to GH release
+        uses: svenstaro/upload-release-action@v2
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/wasm32-unknown-unknown/release/clarity_repl.wasm
+          tag: ${{ github.ref }}
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    if: contains(github.ref, 'main')
+    needs:
+      - audit
+      - build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          # Necessary for Semantic Release
+          token: ${{ secrets.GH_TOKEN }}
+
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          SEMANTIC_RELEASE_PACKAGE: ${{ github.event.repository.name }}
+        with:
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/exec
+            @semantic-release/git
