--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,56 @@ jobs:
       - name: Run rustfmt
         run: cargo fmt --all -- --check
 
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: pre_run
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2021-08-05
+          profile: minimal
+          components: llvm-tools-preview
+          override: true
+
+      - name: Cache cargo
+        uses: actions/cache@v2
+        id: cache-cargo
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-cargo.outputs.cache-hit != 'true'
+        run: cargo install grcov
+
+      - name: Unit Tests
+        env:
+          RUSTFLAGS: "-Zinstrument-coverage"
+          LLVM_PROFILE_FILE: "clarity-repl-%p-%m.profraw"
+        run: cargo build --locked && cargo test
+
+      - name: Generate coverage
+        run: grcov . --binary-path ./target/debug/ -s . -t lcov --branch --ignore-not-existing --ignore "/*" -o lcov.info
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v1
+        with:
+          flags: unittests
+          name: clarity-repl
+          verbose: true
+
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -111,6 +161,9 @@ jobs:
           name: clarity_repl.wasm
           path: target/wasm32-unknown-unknown/release/clarity_repl.wasm
 
+      - name: Unit Tests - Cargo
+        run: cargo test --release --locked --target ${{ matrix.target }}
+
       - name: Publish clarity-repl to crates.io
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
@@ -132,6 +185,7 @@ jobs:
     needs:
       - audit
       - build
+      - test
     steps:
       - name: Checkout
         uses: actions/checkout@v2
