fix: ignore RUSTSEC-2021-0124

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
         run: cargo install cargo-audit
 
       - name: Run audit
-        run: cargo audit --ignore RUSTSEC-2021-0119
+        run: cargo audit --ignore RUSTSEC-2021-0119 --ignore RUSTSEC-2021-0124
 
       - name: Run rustfmt
         run: cargo fmt --all -- --check
