ci: force install wasm-pack
Avoids error when it is already installed and cached. For some reason,
installing only when there is no cache hit does not work and causes a
'command not found' error.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -144,7 +144,7 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
 
       - name: Install dependencies
-        run: cargo install wasm-pack
+        run: cargo install --force wasm-pack
 
       - name: Build - Cargo
         run: cargo build --release
