--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ integer-sqrt = "0.1.3"
 libsecp256k1 = "0.5.0"
 serde_stacker = "0.1"
 rand = "=0.7.3"
+rand_pcg = "0.3.1"
+rand_seeder = "0.2.2"
 atty = "0.2.14"
 tokio = { version = "=1.8.1", features = ["rt", "rt-multi-thread"], optional = true }
 
