--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,12 +3,12 @@ on:
   pull_request:
   push:
     tags:
-      - "v*"
+      - 'v*'
     paths-ignore:
-      - "**/CHANGELOG.md"
-      - "**/package.json"
-      - "**/Cargo.toml"
-      - "**/Cargo.lock"
+      - '**/CHANGELOG.md'
+      - '**/package.json'
+      - '**/Cargo.toml'
+      - '**/Cargo.lock'
     branches:
       - main
       - develop
