--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ tokio = { version = "=1.15.0", features = ["rt", "rt-multi-thread"], optional = 
 pico-args = { version = "0.4.0", optional = true }
 rustyline = { version = "9.1.1", optional = true }
 prettytable-rs = { version = "0.8.0", optional = true }
-reqwest = { version = "0.11", features = ["json", "rustls"], optional = true }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
 
 # WASM
 wasm-bindgen = { version = "0.2", optional = true }
