--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,14 @@ getrandom = { version = "0.2.3", features = ["js"] }
 rand_pcg = "0.3.1"
 rand_seeder = "0.2.2"
 atty = "0.2.14"
-tokio = { version = "=1.15.0", features = ["rt", "rt-multi-thread"], optional = true }
+tokio = { version = "=1.15.0", features = ["full"], optional = true }
+tokio-util = { version = "0.7.1", features = ["codec"] }
+futures = "0.3.12"
+dap_types = { package = "dap-types", path = "../dap-types" }
+httparse = "1.6.0"
+bytes = "1.1.0"
+log = "0.4.16"
+memchr = "2.4.1"
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
