--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,15 @@ rand_pcg = "0.3.1"
 rand_seeder = "0.2.2"
 atty = "0.2.14"
 tokio = { version = "=1.15.0", features = ["full"], optional = true }
-tokio-util = { version = "0.7.1", features = ["codec"] }
-futures = "0.3.12"
-debug_types = "1.0.0"
-httparse = "1.6.0"
-bytes = "1.1.0"
-log = "0.4.16"
-memchr = "2.4.1"
+
+# DAP Debugger
+tokio-util = { version = "0.7.1", features = ["codec"], optional = true }
+futures = { version = "0.3.12", optional = true }
+debug_types = { version = "1.0.0", optional = true }
+httparse = { version = "1.6.0", optional = true }
+bytes = { version = "1.1.0", optional = true }
+log = { version = "0.4.16", optional = true }
+memchr = { version = "2.4.1", optional = true }
 
 # CLI
 pico-args = { version = "0.4.0", optional = true }
@@ -68,8 +70,17 @@ name = "clarity-repl"
 path = "src/bin.rs"
 
 [features]
-default = ["cli"]
+default = ["cli", "dap"]
 cli = ["pico-args", "rustyline", "prettytable-rs", "reqwest", "tokio"]
+dap = [
+    "tokio-util",
+    "futures",
+    "debug_types",
+    "httparse",
+    "bytes",
+    "log",
+    "memchr",
+]
 wasm = ["wasm-bindgen", "reqwest-wasm", "wasm-bindgen-futures"]
 
 [profile.release]
