--- a/components/chainhook-event-observer/Cargo.toml
+++ b/components/chainhook-event-observer/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 serde = "1"
 serde_json = { version = "1", features = ["arbitrary_precision"] }
 serde_derive = "1"
-stacks-rpc-client = "1"
+stacks-rpc-client = "=1.0.0"
 clarinet-utils = "1"
 clarity-repl = "=1.4.1"
 hiro-system-kit = "0.1.0"
