--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -355,7 +355,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - get_release_info
-      - dist_chainhook_node
+#       - dist_chainhook_node
     outputs:
       version: ${{ steps.docker_meta.outputs.version }}
     strategy:
