--- a/components/chainhook-event-observer/Cargo.toml
+++ b/components/chainhook-event-observer/Cargo.toml
@@ -14,7 +14,7 @@ serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-rpc-client = "=1.0.1"
 clarinet-utils = "1"
-clarity-repl = "=1.5.0"
+clarity-repl = "1"
 hiro-system-kit = "0.1.0"
 # stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 # clarinet-utils = { version = "1", path = "../../../clarinet/components/clarinet-utils" }
