--- a/components/chainhook-event-observer/Cargo.toml
+++ b/components/chainhook-event-observer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chainhook-event-observer"
-version = "1.0.7"
+version = "1.0.8"
 description = "Stateless Transaction Indexing Engine for Stacks and Bitcoin"
 license = "GPL-3.0"
 edition = "2021"
@@ -14,13 +14,13 @@ serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-rpc-client = "=1.0.1"
 clarinet-utils = "1"
-clarity-repl = "=1.5.0"
+clarity-repl = "1"
 hiro-system-kit = "0.1.0"
 # stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 # clarinet-utils = { version = "1", path = "../../../clarinet/components/clarinet-utils" }
 # clarity-repl = { version = "1", path = "../../../clarinet/components/clarity-repl" }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
-chainhook-types = { version = "1.0.3", path = "../chainhook-types-rs" }
+chainhook-types = { version = "1.0.5", path = "../chainhook-types-rs" }
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 bitcoincore-rpc = "0.16.0"
 bitcoincore-rpc-json = "0.16.0"
@@ -40,7 +40,7 @@ schemars = { version = "0.8.10" }
 rocket_okapi = "0.8.0-rc.3"
 crossbeam-channel = "0.5.6"
 chrono = { version = "0.4.19", optional = true }
-anyhow = { version = "1.0.56", features = ["backtrace"], optional = true  }
+anyhow = { version = "1.0.56", features = ["backtrace"], optional = true }
 futures = "0.3.21"
 hyper = { version = "0.14.24", features = ["http1", "client"] }
 hex = "0.4.3"
@@ -49,7 +49,7 @@ threadpool = "1.8.1"
 rand = "0.8.5"
 hex-simd = "0.8.0"
 serde_cbor = "0.11.2"
-zeromq = { version = "*", default-features = false, features = ["tokio-runtime", "tcp-transport"], optional = true }
+zeromq = { version = "0.3.3", default-features = false, features = ["tokio-runtime", "tcp-transport"], optional = true }
 dashmap = "5.4.0"
 fxhash = "0.2.1"
 
