--- a/components/chainhook-event-observer/Cargo.toml
+++ b/components/chainhook-event-observer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chainhook-event-observer"
-version = "1.0.8"
+version = "1.0.9"
 description = "Stateless Transaction Indexing Engine for Stacks and Bitcoin"
 license = "GPL-3.0"
 edition = "2021"
@@ -49,7 +49,10 @@ threadpool = "1.8.1"
 rand = "0.8.5"
 hex-simd = "0.8.0"
 serde_cbor = "0.11.2"
-zeromq = { version = "0.3.3", default-features = false, features = ["tokio-runtime", "tcp-transport"], optional = true }
+zeromq = { version = "0.3.3", default-features = false, features = [
+    "tokio-runtime",
+    "tcp-transport",
+], optional = true }
 dashmap = "5.4.0"
 fxhash = "0.2.1"
 
