--- a/components/chainhook-cli/Cargo.toml
+++ b/components/chainhook-cli/Cargo.toml
@@ -38,7 +38,7 @@ atty = "0.2.14"
 crossbeam-channel = "0.5.8"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
 threadpool = "1.8.1"
-rocket_okapi = "0.8.0-rc.3"
+rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger"], git = "https://github.com/MicaiahReid/okapi.git", branch = "feat-chainhook-fixes"}
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 
 
