--- a/examples/arkadiko-data-indexing/vault-monitor/Gemfile
+++ b/examples/arkadiko-data-indexing/vault-monitor/Gemfile
@@ -51,7 +51,7 @@ gem 'logging-rails'
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
 
-gem "administrate"
+gem "administrate", "~> 0.19"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
