--- a/components/chainhook-cli/Cargo.toml
+++ b/components/chainhook-cli/Cargo.toml
@@ -51,6 +51,8 @@ redis = "0.21.5"
 clarity-repl = "=1.7.0"
 clarity-vm = "=2.1.1"
 hex = "0.4.3"
+test-case = "3.1.0"
+serial_test = "2.0.0"
 
 
 [features]
