--- a/tests/Chainhook.toml
+++ b/tests/Chainhook.toml
@@ -26,4 +26,4 @@ max_number_of_networking_threads = 16
 max_caching_memory_size_mb = 32000
 
 [[event_source]]
-tsv_file_url = "https://archive.dev.hiro.so/mainnet/stacks-blockchain-api/mainnet-stacks-blockchain-api-latest"
+tsv_file_url = "https://archive.hiro.so/mainnet/stacks-blockchain-api/mainnet-stacks-blockchain-api-latest"
