--- a/automate/.env
+++ b/automate/.env
@@ -1,1 +1,1 @@
-DOMAIN_URL="https://webhook.site/db639532-0288-44e3-9add-1584af436d6d"
+DOMAIN_URL="https://a738-2405-201-200a-3191-40d5-db02-efa-357.ngrok.io"
