--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chainhook-sdk"
-version = "0.8.5"
+version = "0.8.6"
 description = "Stateless Transaction Indexing Engine for Stacks and Bitcoin"
 license = "GPL-3.0"
 edition = "2021"
@@ -37,7 +37,7 @@ hyper = { version = "0.14.24", features = ["http1", "client"] }
 hex = "0.4.3"
 threadpool = "1.8.1"
 rand = "0.8.5"
-zeromq = { version = "0.3.3", default-features = false, features = ["tokio-runtime", "tcp-transport"], optional = true }
+zmq = { version = "0.10.0", optional = true }
 dashmap = "5.4.0"
 fxhash = "0.2.1"
 lazy_static = "1.4.0"
@@ -51,5 +51,5 @@ test-case = "3.1.0"
 
 [features]
 default = ["log"]
-zeromq = ["dep:zeromq"]
+zeromq = ["zmq"]
 log = ["hiro-system-kit/log"]
