ci: install redis

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,9 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
+      - name: Install redis
+        run: sudo apt-get install -y redis-server
+
       - name: Cargo test
         run: |
           rustup update
