test: add tests for `GET /v1/chainhooks/<uuid>` route (#415)
### Description

Add tests for chainhook service, fix a few things along the way.


---

### Checklist

- [X] All tests pass
- [X] Tests added in this PR (if applicable)
Test coverage before: 37.72%
Test coverage after: 47.07%

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,10 +22,13 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
+      - name: Install redis
+        run: sudo apt-get install -y redis-server
+
       - name: Cargo test
         run: |
           rustup update
-          RUST_BACKTRACE=1 cargo test --all -- --test-threads=1
+          RUST_BACKTRACE=1 cargo test --all --features redis_tests -- --test-threads=1
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
