add deploy environments

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,6 +85,8 @@ jobs:
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     env:
       DEPLOY_ENV: dev
+    environment:
+      name: Development
     steps:
       - name: Checkout actions repo
         uses: actions/checkout@v4
@@ -123,6 +125,8 @@ jobs:
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     env:
       DEPLOY_ENV: stg
+    environment:
+      name: Staging
     steps:
       - name: Checkout actions repo
         uses: actions/checkout@v4
@@ -161,6 +165,8 @@ jobs:
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     env:
       DEPLOY_ENV: prd
+    environment:
+      name: Production
     steps:
       - name: Checkout actions repo
         uses: actions/checkout@v4
