--- a/components/chainhook-cli/src/config/tests/fixtures/testnet_chainhook.toml
+++ b/components/chainhook-cli/src/config/tests/fixtures/testnet_chainhook.toml
@@ -1,11 +1,4 @@
-use super::file::NetworkConfigMode;
-use chainhook_sdk::types::BitcoinNetwork;
-
-pub fn generate_config(network: &BitcoinNetwork) -> String {
-    let mode = NetworkConfigMode::from_bitcoin_network(network);
-    let network = format!("{:?}", network);
-    let conf = format!(
-        r#"[storage]
+[storage]
 working_dir = "cache"
 
 # The Http Api allows you to register / deregister
@@ -17,7 +10,7 @@ working_dir = "cache"
 # database_uri = "redis://localhost:6379/"
 
 [network]
-mode = "{mode}"
+mode = "testnet"
 bitcoind_rpc_url = "http://localhost:8332"
 bitcoind_rpc_username = "devnet"
 bitcoind_rpc_password = "devnet"
@@ -39,10 +32,4 @@ max_number_of_networking_threads = 16
 max_caching_memory_size_mb = 32000
 
 [[event_source]]
-tsv_file_url = "https://archive.hiro.so/{network}/stacks-blockchain-api/{network}-stacks-blockchain-api-latest"
-"#,
-        mode = mode.as_str(),
-        network = network.to_lowercase(),
-    );
-    return conf;
-}
+tsv_file_url = "https://archive.hiro.so/testnet/stacks-blockchain-api/testnet-stacks-blockchain-api-latest"
